Fix overflowing and overshrinking sections

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
     margin: 0px;
     font-size: 18px;
     color: #E5E7EB;
+    /* min-width: 860px; */
 }
 
 .header{
@@ -16,6 +17,7 @@ body{
     justify-content: space-between;
     align-items: center;
     padding: 8px 96px;
+    gap: 16px;
 }
 
 .logo{
@@ -28,6 +30,7 @@ ul{
     list-style-type: none;
     padding: 0px;
     display: flex;
+    flex-wrap: wrap;
     gap: 16px;
 }
 
@@ -93,6 +96,7 @@ a{
     justify-content: center;
     width: auto;
     margin: 0px auto 120px auto;
+    flex-wrap: wrap;
 }
 
 .info-item{
@@ -102,7 +106,7 @@ a{
     align-items: center;
     min-width: 120px;
     max-width: 250px;
-    margin: 0px 36px;
+    margin: 0px 36px 16px 36px;
 }
 
 .info-img{
@@ -120,13 +124,21 @@ a{
     color: #1F2937;
 }
 
-.quote{
+.quote-container{
     background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+
+}
+
+.quote{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 144px;
+    box-sizing: content-box;
+    max-width: 800px;
 }
 
 .text{
@@ -134,6 +146,7 @@ a{
     font-style: italic;
     font-weight: 200;
     color: #1F2937;
+    /* max-width: 800px; */
 }
 
 .author{
@@ -147,11 +160,13 @@ a{
 .call-to-action{
     background-color: #3882F6;
     display: flex;
-    margin: 72px 144px;
-    width: auto;
+    margin: 72px auto;
     padding: 48px 112px;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     gap: 16px;
+    min-width: 400px;
+
 }
 
 .content{
@@ -174,7 +189,11 @@ a{
     font-size: 18px;
     border-radius: 10px;
     padding: 0px 48px;
-    flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 61px;
+    
 }
 
 .footer{
